--- a/index.html
+++ b/index.html
@@ -13,5 +13,17 @@
 
 
     <script src="index.js"></script>
+    <style>
+        #clockLabel {
+            display: flex;
+            justify-content: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            background-color: blanchedalmond;
+            border: 1px solid black;
+            border-radius: 5px;
+        }
+    </style>
 </body>
 </html>
